overflow Fixing

--- a/src/output.css
+++ b/src/output.css
@@ -586,6 +586,9 @@
   .-z-10 {
     z-index: calc(10 * -1);
   }
+  .z-10 {
+    z-index: 10;
+  }
   .z-20 {
     z-index: 20;
   }
@@ -706,6 +709,9 @@
   }
   .h-full {
     height: 100%;
+  }
+  .h-screen {
+    height: 100vh;
   }
   .w-72 {
     width: calc(var(--spacing) * 72);
